# figtext

./: README.md  setup.cfg
src/figtext/: __main__.py  app.py
