[metadata]
name = figtext
version = attr: figtext.__version__
author = TomJGooding
description = A simple TUI for generating ASCII text banners with FIGlet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/figtext
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.24.0
    pyfiglet
    pyperclip

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    figtext = figtext.app:run

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    textual[dev]
